# faspl

./: .gitignore  Cargo.toml
crates/faspl-ast/: Cargo.toml
crates/faspl-ast/src/: lib.rs  literals.rs
crates/faspl-ast/src/control_flow/: match_arm.rs  mod.rs  pattern.rs
crates/faspl-ast/src/definition/: enum_def.rs  field.rs  fn_def.rs  generic_param.rs  impl_block.rs  mod.rs  param.rs  struct_def.rs  trait_def.rs  trait_method.rs  variant.rs
crates/faspl-ast/src/operator/: binary_op.rs  mod.rs  unary_op.rs
crates/faspl-common/: Cargo.toml
crates/faspl-common/src/: interner.rs  lib.rs  span.rs
crates/faspl-lexer/: Cargo.toml
crates/faspl-lexer/src/: lib.rs
crates/faspl-parser/: Cargo.toml
crates/faspl-parser/src/: lib.rs
