[package]
name = "faspl-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories = ["compilers", "data-structures"]
keywords = ["faspl", "ast", "compiler"]
homepage = "https://github/devmcsam/faspl/crates/faspl-ast"
repository = "https://github/devmcsam/faspl/crates/faspl-ast"
description = "The ast for the faspl language"
readme = "README.md"
publish = false

[dependencies]
faspl-common = { path = "../faspl-common" }
[lints]
workspace = true