[package]
name = "faspl-lexer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories = ["compilers", "data-structures"]
keywords = ["faspl", "ast", "compiler"]
homepage = "https://github/devmcsam/faspl/crates/faspl-lexer"
repository = "https://github/devmcsam/faspl/crates/faspl-lexer"
description = "The lexer for the faspl language"
readme = "README.md"
publish = false

[dependencies]

[lints]
workspace = true